{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 696,
  "lineage": "102e2fba-3191-c9e1-abf8-64d86474aa08",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prd-appdynamics-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-097a2df4ac947655f",
            "arn": "arn:aws:ec2:us-east-2:385612536658:instance/i-015ab989e6ca5dca1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-015ab989e6ca5dca1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03c0487543e8ffda8",
            "private_dns": "ip-172-31-40-69.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.40.69",
            "public_dns": "ec2-18-224-179-41.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.179.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05ae86d67e9a33000",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default",
              "http-access",
              "ssh_access"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ebe6561d3fb299a",
            "tags": {
              "Name": "prd-appdynamics-db"
            },
            "tags_all": {
              "Name": "prd-appdynamics-db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02483edbf039c56f0",
              "sg-02484ea4bc12aa803",
              "sg-0bf05859a33c353d6"
            ]
          },
          "dependencies": [
            "aws_security_group.appdynamics_access",
            "aws_security_group.http_access",
            "aws_security_group.ssh_access-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prd-blocking-application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-097a2df4ac947655f",
            "arn": "arn:aws:ec2:us-east-2:385612536658:instance/i-0088827195fcad2e4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform-20221006051231184000000001",
            "id": "i-0088827195fcad2e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d961d79c2df64532",
            "private_dns": "ip-172-31-47-173.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.173",
            "public_dns": "ec2-18-216-186-22.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.186.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-060f647f068da688f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default",
              "http-access",
              "ssh_access"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ebe6561d3fb299a",
            "tags": {
              "Name": "prd-blocking-application"
            },
            "tags_all": {
              "Name": "prd-blocking-application"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02483edbf039c56f0",
              "sg-02484ea4bc12aa803",
              "sg-0bf05859a33c353d6"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.iam_for_ec2",
            "aws_security_group.http_access",
            "aws_security_group.ssh_access-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prd-reactive-application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-097a2df4ac947655f",
            "arn": "arn:aws:ec2:us-east-2:385612536658:instance/i-085857bfc4f8d5f47",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform-20221006051231184000000001",
            "id": "i-085857bfc4f8d5f47",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06b155c7f35eb7932",
            "private_dns": "ip-172-31-43-10.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.43.10",
            "public_dns": "ec2-18-118-45-238.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.45.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0607757807c22daef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default",
              "http-access",
              "ssh_access"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ebe6561d3fb299a",
            "tags": {
              "Name": "prd-reactive-application"
            },
            "tags_all": {
              "Name": "prd-reactive-application"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02483edbf039c56f0",
              "sg-02484ea4bc12aa803",
              "sg-0bf05859a33c353d6"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.iam_for_ec2",
            "aws_security_group.http_access",
            "aws_security_group.ssh_access-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_access_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385612536658:internet-gateway/igw-0e5a9896e86b0d241",
            "id": "igw-0e5a9896e86b0d241",
            "owner_id": "385612536658",
            "tags": {
              "Name": "internet_access_igw"
            },
            "tags_all": {
              "Name": "internet_access_igw"
            },
            "vpc_id": "vpc-00649c94750a94c55"
          },
          "dependencies": [
            "aws_vpc.internet_access_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access_routetointernet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e5a9896e86b0d241",
            "id": "r-rtb-05b8acaa146cfa68a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05b8acaa146cfa68a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_access_igw",
            "aws_route_table.internet_access_rt",
            "aws_vpc.internet_access_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_access_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385612536658:route-table/rtb-05b8acaa146cfa68a",
            "id": "rtb-05b8acaa146cfa68a",
            "owner_id": "385612536658",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e5a9896e86b0d241",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "internet_access_rt"
            },
            "tags_all": {
              "Name": "internet_access_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00649c94750a94c55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_access_igw",
            "aws_vpc.internet_access_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_access_pub_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09419eb665588f788",
            "route_table_id": "rtb-05b8acaa146cfa68a",
            "subnet_id": "subnet-0d231939354f82a55"
          },
          "dependencies": [
            "aws_internet_gateway.internet_access_igw",
            "aws_route_table.internet_access_rt",
            "aws_subnet.internet_access_public_subnet",
            "aws_vpc.internet_access_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "appdynamics_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:385612536658:security-group/sg-01f29fd6f1b3731e2",
            "description": "Allow access to appdynamics from application instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f29fd6f1b3731e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "access to appdynamics",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "appdynamics_access",
            "name_prefix": "",
            "owner_id": "385612536658",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AppDynamics"
            },
            "tags_all": {
              "Name": "AppDynamics"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a8b4960f72beeab"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:385612536658:security-group/sg-02483edbf039c56f0",
            "description": "Allow http access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02483edbf039c56f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access to instances",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access to instances",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Tomcat access to instances",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "http-access",
            "name_prefix": "",
            "owner_id": "385612536658",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HTTP"
            },
            "tags_all": {
              "Name": "HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a8b4960f72beeab"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_access-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:385612536658:security-group/sg-0bf05859a33c353d6",
            "description": "Allow ssh  access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf05859a33c353d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "189.62.150.102/32"
                ],
                "description": "SSH access to instances",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_access",
            "name_prefix": "",
            "owner_id": "385612536658",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH"
            },
            "tags_all": {
              "Name": "SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a8b4960f72beeab"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "internet_access_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385612536658:subnet/subnet-0d231939354f82a55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.0.0.0/16",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d231939354f82a55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "385612536658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "internet_access_public_subnet"
            },
            "tags_all": {
              "Name": "internet_access_public_subnet"
            },
            "vpc_id": "vpc-00649c94750a94c55"
          },
          "dependencies": [
            "aws_vpc.internet_access_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "internet_access_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385612536658:vpc/vpc-00649c94750a94c55",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/16",
            "default_network_acl_id": "acl-032d50821bc796d3f",
            "default_route_table_id": "rtb-06645aaef13e6a607",
            "default_security_group_id": "sg-0ec282e02b9d80b29",
            "dhcp_options_id": "dopt-006a702fb50f9224b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00649c94750a94c55",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06645aaef13e6a607",
            "owner_id": "385612536658",
            "tags": {
              "Name": "internet_access_vpc"
            },
            "tags_all": {
              "Name": "internet_access_vpc"
            }
          }
        }
      ]
    }
  ]
}